# object-proposals

./: .gitignore  ObjectProposals.m  README.md  compile.m  config.json  config.json.example  demo.m  evaluateMetricForProposal.m  initialize.m  runObjectProposal.m  runObjectProposals.m
evaluation-metrics/: .gitignore  README.md  compute_recall_candidates_voc07.m  evaluationStartup.m  getMethods.m  maxRow.m  methods.mat  plotEverything.m  plotMetric.m
gop_1.3/: README.md
jsonlab_1.0beta/: license.txt
lpo/: CMakeLists.txt  README.md  add_bsd.py  add_bsd.sh
lpo/lib/python/dataset/: CMakeLists.txt  apng.cpp  apng.h  berkeley.cpp  berkeley.h  boundary.cpp  boundary.h  coco.cpp  coco.h  evaluation.cpp  evaluation.h  nyu.cpp  nyu.h  voc.cpp  voc.h  weizmann.cpp  weizmann.h
objectness-release-v2.2/: LICENSE.txt  README.txt  computeArea.m  computeIntegralImage.m  computeIntegralImageScores.m  computeObjectnessHeatMap.m  computeQuantMatrix.m  computeScores.m  defaultParams.m  demo.m  drawBoxes.m  generateWindows.m  gray2rgb.m  integralHistSuperpixels.m  integrateBayes.m  learnParameters.m  learnTheta.m  learnThetaMS.m  nms_pascal.m  numerizeLabels.m  output.mat  retrieveCoordinates.m  rgb2lab.m  runObjectness.m  scoreSampling.m  segmentArea.m  startup.m  updatePath.m
rahtuObjectness/: ICCV_windowPriorDistribution.mat  Licence.txt  bescores.mexa64  compileObjectnessMex.m  integralimage.c  integralimage.mexa64  mvg_FelzenswalbSuperpixelWrapper.m  mvg_computeFeatureScores.m  mvg_drawWindows.m  mvg_makeSuperpixelsWindows.m  mvg_runObjectDetection.m  mvg_scoreSamplingWrapper.m  mvg_selectWindowsNMSa.m  mvg_superpixelBBintegralScore.m  scoreSamplingMex.mexa64  scoreSamplingMex.mexw32  selectwindows.mexa64  selectwindows.mexw32  wsscores.mexa64  wsscores.mexw64
rantalankilaSegments/: Readme.txt  add_sp_parts.m  complementary_branch_list_thresh5_count1.mat  floodfill_sp.m  floodfill_sp_all.m  graphcut_params_data.mat  graphcut_regions.m  initial_seg.m  merge_histograms.m  (+14 more)
rigor/rigor_src/boykov_maxflow/: CHANGES.TXT  CMakeLists.txt  README.TXT  bk_dynamicgraphs_mex.cpp  graph-impl.hpp  graph.h  main.cpp  maxflow-impl.hpp  precomptrees-impl.hpp  visualize-impl.hpp
rigor/rigor_src/boykov_maxflow/dynamicgraphs/: bk_dynamicgraphs.h  bk_kohli.cpp  bk_multiseeddynamic.cpp  bk_multiseeddynamic.h  bk_nodynamic.cpp  bk_utils.cpp
rigor/rigor_src/boykov_maxflow/examples/: example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  examples.h  search_example_graph.cpp  search_example_graph2.cpp  search_example_graph_utils.cpp  utils.cpp
rigor/rigor_src/boykov_maxflow/tests/: test_deepcopy.cpp  test_kohli.cpp  test_seedsolve.cpp  tests.h
(+1696 files in other folders)
